# scan-for-secrets

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: test.yml
scan_for_credentials/: cli.py
scan_for_secrets/: __init__.py  cli.py  escaping.py  scanner.py
tests/: test_cli.py  test_escaping.py  test_scan_for_credentials.py  test_scan_for_secrets.py  test_scanner.py
