[project]
name = "scan-for-secrets"
version = "0.1"
description = "Scan for secrets in files you want to publish"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/scan-for-secrets"
Changelog = "https://github.com/simonw/scan-for-secrets/releases"
Issues = "https://github.com/simonw/scan-for-secrets/issues"
CI = "https://github.com/simonw/scan-for-secrets/actions"

[project.scripts]
scan-for-secrets = "scan_for_secrets.cli:cli"

[dependency-groups]
dev = ["pytest"]
